== Version 1.1.0 (in SVN)

* Spec::Rails no longer loads ActiveRecord extensions if it's disablet in config/boot.rb
* Applied LH[#178] small annoyances running specs with warnings enabled (Patch from Mikko Lehtonen)
* Tighter integration with Rails fixtures. Take advantage of fixture caching to get performance improvements (Thanks to Pat Maddox, Nick Kallen, Jonathan Barnes, and Curtis)

== Version 1.1.0-RC1

Textmate Bundle users - this release adds a new RSpec bundle that highlights describe, it, before and after and
provides navigation to descriptions and examples (rather than classes and methods). When you first install this,
it is going to try to hijack all of your .rb files. All you need to do is open a .rb file that does not end with
'spec.rb' and change the bundle selection from RSpec to Ruby. TextMate will do the right thing from then on.

Shortcuts for tab-activated snippets all follow the TextMate convention of 2 or 3 letters of the first word, followed by the first letter of each subsequent word. So "should have_at_least" would be triggered by shhal.

We reduced the scope for running spec directories, files, a single file or individual spec in TextMate to source.ruby.rspec. This allowed us to restore the standard Ruby shortcuts:

CMD-R runs all the specs in one file
CMD-SHIFT-R runs an individual spec
CMD-OPT-R runs any files or directories selected in the TextMate drawer

rspec_on_rails users - don't forget to run script/generate rspec

* Added shared_examples_for method, which you can (should) use instead of describe Foo, :shared => true
* Applied LH[#168] Fix describe Object, "description contains a # in it" (Patch from Martin Emde)
* Applied LH[#15] Reverse loading of ActionView::Base helper modules (Patch from Mark Van Holstyn)
* Applied LH[#149] Update contribute page to point towards lighthouse (Patch from Josh Knowles)
* Applied LH[#142] verify_rcov fails with latest rcov (Patch from Kyle Hargraves)