@@ -44,10 +44,9 @@ module Spec
         
         # This method is invoked when an example is not yet implemented (i.e. has not
         # been provided a block), or when an ExamplePendingError is raised.
-        # +name+ is the name of the example.
         # +message+ is the message from the ExamplePendingError, if it exists, or the
         # default value of "Not Yet Implemented"
-        def example_pending(example_group_description, example_name, message)
+        def example_pending(example_group_description, example, message)
         end
 
         # This method is invoked after all of the examples have executed. The next method
