@@ -13,9 +13,9 @@ module Spec
       
         def example_failed(example, counter, failure)
           message = if failure.expectation_not_met?
-            "- #{example} (FAILED - #{counter})"
+            "- #{example.description} (FAILED - #{counter})"
           else
-            "- #{example} (ERROR - #{counter})"
+            "- #{example.description} (ERROR - #{counter})"
           end
           
           output.puts(failure.expectation_not_met? ? red(message) : magenta(message))
@@ -23,14 +23,14 @@ module Spec
         end
         
         def example_passed(example)
-          message = "- #{example}"
+          message = "- #{example.description}"
           output.puts green(message)
           output.flush
         end
         
-        def example_pending(example_group_description, example_name, message)
+        def example_pending(example_group_description, example, message)
           super
-          output.puts yellow("- #{example_name} (PENDING: #{message})")
+          output.puts yellow("- #{example.description} (PENDING: #{message})")
           output.flush
         end
       end
