@@ -1,5 +1,7 @@
 == Version 1.1.0 (in SVN)
 
+* Formatter.pending signature changed so it gets passed an ExampleGroup instance instead of the name ( LH[#180])
+* Fixed LH[#180] Spec::Rails::Example::ModelExampleGroup and friends show up in rspec/rails output
 * Spec::Rails no longer loads ActiveRecord extensions if it's disablet in config/boot.rb
 * Applied LH[#178] small annoyances running specs with warnings enabled (Patch from Mikko Lehtonen)
 * Tighter integration with Rails fixtures. Take advantage of fixture caching to get performance improvements (Thanks to Pat Maddox, Nick Kallen, Jonathan Barnes, and Curtis)
